# openthread

./: BUILD.gn
etc/gn/: openthread.gni
etc/gn/build_overrides/: mbedtls.gni
include/openthread/: BUILD.gn
src/core/: BUILD.gn
src/lib/hdlc/: BUILD.gn
src/lib/spinel/: BUILD.gn
